tests/parse_print/autogen/613~1436580506_52/stderr.expected
Error:
    tests/parse_print/autogen/613~1436580506_52/spec.essence:14:11:
   |
14 |           partition({true, true, true, false, false}, {true}, {false}, {true, false},
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

tests/parse_print/autogen/613~1436580506_52/spec.essence:17:11:
   |
17 |           partition({true, false, false, true, true}, {false, true, true},
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool
